# advent-of-code

./: .gitignore  README.md  renovate.json  shell.nix
.github/workflows/: ci.yml
2020/01/: go.mod  main.go  main_test.go
2020/02/: Cargo.toml
2020/02/src/: error.rs  main.rs
2020/03/: go.mod  main.go  main_test.go  models.go  models_test.go
2020/03/files/: map_example.txt  map_line_length_mismatch.txt  map_unknown_char.txt
2020/04/: Cargo.toml
2020/04/files/: example.txt
2020/04/src/: error.rs  main.rs  passport.rs
2020/05/: go.mod  main.go  main_test.go  plane.go  plane_test.go  seat.go  seat_test.go
2020/05/files/: example_invalid.txt
2020/06/: Cargo.toml
2020/07/: go.mod  main.go  main_test.go
2020/08/: Cargo.toml
2020/09/: go.mod  main.go  main_test.go  output.go  output_test.go
2020/10/: Cargo.toml
2020/11/: go.mod  main.go  main_test.go  seats.go  seats_test.go
2020/12/: Cargo.toml
2020/13/: go.mod  main.go  main_test.go
2020/14/: Cargo.toml
2020/14/src/: instruction.rs  main.rs
2020/15/: go.mod  main.go  main_test.go
2020/16/: Cargo.toml
2020/16/src/: data.rs  main.rs
2020/17/: go.mod  main.go  main_test.go  pocket.go  pocket_fixed.go  pocket_fixed_test.go  pocket_test.go
2020/18/: Cargo.toml
2020/19/: go.mod  main.go  main_test.go  rule.go  rule_test.go
2021/01/: app.nix  code.nix  flake.nix
2021/02/: main.py  main_test.py
2021/03/: app.nix  flake.nix
2021/04/: Pipfile
lib/nix/: flake-builder.nix
scripts/: setup-go.patch  setup-nix.patch  setup-python.patch  setup-rust.patch  setup.sh
(+28 files in other folders)
