[package]
name = "advent-of-code-2020-14"
version = "0.1.0"
authors = ["Tobias Happ <tobias.happ@gmx.de>"]
edition = "2018"

[dependencies]
error = { path = "../../lib/rust/error" }
file = { path = "../../lib/rust/file" }
lazy_static = "1.4.0"
regex = "1.4.3"

[dev-dependencies]
hamcrest2 = "0.3.0"
