[package]
name = "advent-of-code-2020-16"
version = "0.1.0"
authors = ["Tobias Happ <tobias.happ@gmx.de>"]
edition = "2018"

[dependencies]
error = { path = "../../lib/rust/error" }
file = { path = "../../lib/rust/file" }
regex = "1.4.2"
lazy_static = "1.4.0"

[dev-dependencies]
hamcrest2 = "0.3.0"
